styles/website.css
/* ... */
.hover-go:before, .hover-back:before {
    position: absolute;
    height: 100%;
    font-size: 125%;
    line-height: 3.5;
    color: #fff;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
}
.right:before {
    content: "\f116";
}
.left:before{
	content: "\f116";
	-webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    transform: rotate(180deg);
}
.hover-go:before, .hover-back:before{
    font-family: 'Bandwidth';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 2.8;
    -webkit-font-smoothing: antialiased;
}
.hover-go:after, .hover-back:after {
    content: '';
    position: absolute;
    z-index: -1;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
}
.light{
	color: #243a51;
	border:	2px solid #243a51;
}
.light:hover{
	color: #fff;
	background-color: #243a51;
}
.medium{
	font-size: .8em;
	padding:13px 40px;
}
.small{
	font-size: .6em;
	padding:11px 30px;
}
.submit{
   background-color: #51B54A;
}
.submit:hover{
	background-color: #43963d;
}
.cancel{
	background-color: #D74227;
}
.cancel:hover{
	background-color: #b1351e;
}
.bandwidth-color-secondary{
	border: 2px solid #fabb15;
	color: #fabb15;
}
.bandwidth-color-primary{
	background-color: #fabb15;
	color: #fff;
}
.aimg {
   border-bottom: none;
}
.book-body, .book-summary{
  height: calc(100% - 70px);
  position: fixed;
  bottom: 0;
  top: inherit;
}
.book-header{
  border-top: 1px solid rgba(0,0,0,.07);
  top: 70px;
}
.book-header h1 a, .book-header h1 a:hover {
   border-bottom: none;
}
.book-header .btn.lang-switcher.active {
    background-color: #2d3134;
    border-bottom: 5px solid #00bcec;
    color: #fff;
}
.book-header .btn.lang-switcher {
    text-transform: uppercase;
    background-color: #272B2D;
    color: #D0D4D7;
}
.api-method-code {
    color: #EEE;
    background-color: #272B2D !important;
}
.api-method-code pre {
    color: #EEE;
    background-color: #2D3134;
    border-radius: 3px;
}
.book-summary ul.summary li.active>a {
    color: #008db1;
    font-weight: bold;
}
.markdown-section a{
  color: #008db1 !important;
}
.markdown-section {
    padding: 0px 30px 0;
}
.markdown-section h1 {
    padding-top: 15px;
}
.book.color-theme-3 .book-header .btn.lang-switcher.active {
    background-color: #186469;
    background-color: #2D3134;
    color: #fff;
}
.book-summary ul.summary li a, .book-summary ul.summary li span {
    padding: 5px 15px;
}
.book-summary ul.summary li.header {
    padding: 20px 15px 0px 15px;
}
.book-summary ul.summary li.header:first-child {
    padding-top: 5px;
}
.book-header h1{
   display: none;
}
.pull-right{
   display: none;
}
.font-settings{
   display: none;
}
.chapter span{
   text-transform: uppercase;
   color: #939da3 !important;
   padding-top: 20px !important;
}
.devCards{
   display: inline-block;
   margin: 1em;
   padding: 1em;
   width: calc(33% - 2em);
   min-width:300px;
   vertical-align:top;
   border: 1px solid rgba(0,0,0,.07);
   box-shadow: 5px 5px 0 0 rgba(0,0,0,0.04);
   border-radius: 3px;
   text-align: center;
}
.devCards h2{
   margin: 0;
}
a{
  font-weight: 500;
  border-bottom: 1px solid;
  text-decoration:none;
  cursor: pointer;
  cursor: hand;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  transition: all 0.1s;
}
a:hover{
  padding-bottom:.15em;
  text-decoration: none !important;
}
a:active{
  padding-bottom:0em;
  color:#dcdcdc;
}
pre{
  border-radius: 3px;
}
pre code{
  border: none !important;
}
th{
  color: #fff;
  background: #3a455c;
  border:none !important;
}
.markdown-section code {
    padding: .3em;
    margin: 0;
    font-size: .85em;
    background-color: #f1f1f1;
    border-radius: 3px;
    border: 1px solid #e4e4e4;
}
code {
    padding: .3em;
    margin: 0;
    font-size: .85em;
    background-color: #f1f1f1;
    border-radius: 3px;
    font-family: Consolas,"Liberation Mono",Menlo,Courier,monospace;
    direction: ltr;
}
code:before, code:after{
    letter-spacing: -.2em;
    content: "\00a0";
}
.get{
   background-color: #6cbf0d !important;
   color: #fff !important;
   border:none !important;
}
.post{
   background-color: #00bcec !important;
   color: #fff !important;
   border:none !important;
}
.put{
   background-color: #a5639b !important;
   color: #fff !important;
   border:none !important;
}
.delete{
   background-color:#e8562e !important;
   color: #fff !important;
   border:none !important;
}
.alert{
	display:inline-block;
	padding: .5em 1em;
	border: 2px solid #f6bbab;
	color: #e8562e;
	background-color: #fceae6;
	font-weight: 700;
	width:auto;
   line-height: 2em;
}
.alert:before{
	display:inline-block;
	font-family: 'Bandwidth', Open Sans, Oswald, Sans-Serif;
	width: 2em;
	height:2em;
	line-height:2em;
	content: "!";
	background-color: #fff;
	border-radius:2em;
	border: 2px solid #f6bbab;
	margin-right: 1em;
	vertical-align: middle;
	text-align:center;
}
.alert a{
	font-family: 'Bandwidth', Open Sans, Oswald;
	font-weight: 500;
	border-bottom: 1px solid;
	text-decoration:none;
	margin-left: 1em;
	cursor: pointer;
	cursor: hand;
	-webkit-transition: all 0.1s;
   -moz-transition: all 0.1s;
   transition: all 0.1s;
	overflow:hidden;
}
.alert a:hover{
	padding-bottom:.3em;
}
.alert a:active{
	padding-bottom:0em;
	color:#fff;
}
.small{
	padding: .5em 1em;
	font-size: .8em;
}
.general{
	color: #3a455c;
    background: #d9f5fc;
    border: 2px solid #7fddf5;
}
.general:before{
	content:"i";
	border:2px solid #7fddf5;
}
.success{
	color: #5a9f0b;
    background: #e9f5db;
    border-color: #b5df86;
}
.success:before {
	content:"\f12c";
	border:2px solid #b5df86;
}
.global{
	width: 100%;
}
.text-only{
	line-height: 1.6em;
}
.text-only:before{
	display:none;
}
/* ... */

